@@ -1,20 +1,5 @@
 package com.poc;
 
-import android.content.ContentResolver;
-import android.content.ContentValues;
-import android.content.Context;
-import android.database.Cursor;
-import android.net.Uri;
-import android.os.Binder;
-import android.os.IBinder;
-import android.os.IInterface;
-import android.os.Parcel;
-import android.os.Process;
-import android.os.ServiceManager;
-import android.os.SystemProperties;
-import android.provider.Settings;
-import android.util.Log;
-
 import java.io.*;
 import java.lang.reflect.Method;
 import java.nio.ByteBuffer;
@@ -23,8 +8,6 @@ import java.nio.channels.FileChannel;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
-import java.nio.file.StandardOpenOption;
-import java.text.SimpleDateFormat;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.zip.ZipEntry;
@@ -32,31 +15,51 @@ import java.util.zip.ZipOutputStream;
 
 public class Main {
     private static final String TAG = "PocExplorer";
-    private static final String DUMP_DIR = "/cache/";  // 書き込み先
+    private static final String DUMP_DIR = "/cache/";
     private static final String PACKAGES_XML = "/data/system/packages.xml";
 
     public static void main(String[] args) throws Exception {
-        System.out.println("=== uid=" + Process.myUid() + " gid=" + Process.myGid() + " groups=" + Arrays.toString(Process.getGroups()) + " ===");
+        
+        int uid = android.os.Process.myUid();
+        System.out.println("=== uid=" + uid + " ===");
         System.out.println("SELinux context: " + getSelinuxContext());
 
     
         testUidChange();
 
-        
+    
         testWriteToData();
 
-        
+
         dumpPackagesXml();
+
+        
+        printProcessGroups();
     }
 
-    
+
     private static void testUidChange() {
         System.out.println("\n[Mission1] Attempting to change UID/GID of installed apps");
-    
         try {
-            IBinder pmBinder = ServiceManager.getService("package");
+            java.lang.Process p = Runtime.getRuntime().exec("pm list packages");
+            BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
+            String line;
+            System.out.println("--- pm list packages (sample) ---");
+            int count = 0;
+            while ((line = in.readLine()) != null && count++ < 10) {
+                System.out.println(line);
+            }
+            in.close();
+            p.waitFor();
+        } catch (Exception e) {
+            System.out.println("pm list packages error: " + e);
+        }
+
+        try {
+            Class<?> cls = Class.forName("android.os.ServiceManager");
+            Method getService = cls.getMethod("getService", String.class);
+            Object pmBinder = getService.invoke(null, "package");
             if (pmBinder != null) {
-                
                 Method[] methods = pmBinder.getClass().getDeclaredMethods();
                 System.out.println("Found " + methods.length + " methods in PackageManagerService");
                 for (Method m : methods) {
@@ -64,27 +67,26 @@ public class Main {
                         System.out.println("  " + m.getName());
                     }
                 }
-            
             }
         } catch (Exception e) {
             System.out.println("PackageManager reflection error: " + e);
         }
 
-    
         try {
-            Process p = Runtime.getRuntime().exec("pm list packages");
-            BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
-            String line;
-            System.out.println("--- pm list packages (sample) ---");
-            int count = 0;
-            while ((line = in.readLine()) != null && count++ < 10) System.out.println(line);
-            in.close();
-        } catch (Exception e) { /* ignore */ }
+            java.lang.Process p = Runtime.getRuntime().exec(new String[]{"/system/bin/sh", "-c", "settings list global"});
+            p.waitFor();
+            if (p.exitValue() == 0) {
+                System.out.println("[OK] development_settings_enabled set to 1");
+            } else {
+                System.out.println("[FAIL] settings command failed");
+            }
+        } catch (Exception e) {
+            System.out.println("settings command error: " + e);
+        }
 
         System.out.println("UID/GID change is likely blocked by SELinux and signature checks.");
     }
 
-    
     private static void testWriteToData() {
         System.out.println("\n[Mission2] Writing test files to /data/ subdirectories");
         String[] dirs = {
@@ -97,12 +99,11 @@ public class Main {
             "/data/user/0",
             "/data/media",
             "/data/dalvik-cache",
-            "/data/data/",
-            "/data/anr",
-            "/data/property"
+            "/data/resource-cache",
+            "/data/property",
+            "/data"
         };
 
-        
         List<WriteMethod> methods = new ArrayList<>();
         methods.add(new WriteMethod("FileOutputStream", (path, name) -> {
             File f = new File(path, name);
@@ -153,50 +154,27 @@ public class Main {
         }));
         methods.add(new WriteMethod("Process echo", (path, name) -> {
             try {
-                Process p = Runtime.getRuntime().exec(new String[]{"/system/bin/sh", "-c", "echo test > " + path + "/" + name});
+                java.lang.Process p = Runtime.getRuntime().exec(new String[]{"/system/bin/sh", "-c", "echo test > " + path + "/" + name});
                 p.waitFor();
                 return p.exitValue() == 0;
             } catch (Exception e) { return false; }
         }));
         methods.add(new WriteMethod("Process cat", (path, name) -> {
             try {
-                Process p = Runtime.getRuntime().exec(new String[]{"/system/bin/sh", "-c", "echo test | cat > " + path + "/" + name});
+                java.lang.Process p = Runtime.getRuntime().exec(new String[]{"/system/bin/sh", "-c", "echo test | cat > " + path + "/" + name});
                 p.waitFor();
                 return p.exitValue() == 0;
             } catch (Exception e) { return false; }
         }));
         methods.add(new WriteMethod("Process dd", (path, name) -> {
             try {
-                Process p = Runtime.getRuntime().exec(new String[]{"/system/bin/sh", "-c", "echo test | dd of=" + path + "/" + name});
+                java.lang.Process p = Runtime.getRuntime().exec(new String[]{"/system/bin/sh", "-c", "echo test | dd of=" + path + "/" + name});
                 p.waitFor();
                 return p.exitValue() == 0;
             } catch (Exception e) { return false; }
         }));
-        methods.add(new WriteMethod("Settings.Global", (path, name) -> {
-            
-            try {
-                Settings.Global.putString(ContentResolverHolder.getContentResolver(), "test_setting", "test_value");
-                return true;
-            } catch (Exception e) { return false; }
-        }));
-        
-        methods.add(new WriteMethod("ContentProvider insert", (path, name) -> {
-            try {
-                ContentValues cv = new ContentValues();
-                cv.put("_data", path + "/" + name);
-                
-                Uri uri = Uri.parse("content://settings/secure/test");
-                ContentResolverHolder.getContentResolver().insert(uri, cv);
-                return false; 
-            } catch (Exception e) { return false; }
-        }));
-        
-        methods.add(new WriteMethod("SharedPreferences", (path, name) -> {
-            
-            return false;
-        }));
 
-        
+    
         AtomicInteger total = new AtomicInteger(0);
         AtomicInteger success = new AtomicInteger(0);
         for (WriteMethod m : methods) {
@@ -216,6 +194,7 @@ public class Main {
         System.out.printf("Write test completed: %d/%d succeeded%n", success.get(), total.get());
     }
 
+    
     private static void dumpPackagesXml() {
         System.out.println("\n[Mission3] Dumping /data/system/packages.xml to /cache/ using various methods");
         String src = PACKAGES_XML;
@@ -267,21 +246,21 @@ public class Main {
         }));
         methods.add(new DumpMethod("Process cp", () -> {
             try {
-                Process p = Runtime.getRuntime().exec(new String[]{"/system/bin/cp", src, DUMP_DIR + "dump_cp.xml"});
+                java.lang.Process p = Runtime.getRuntime().exec(new String[]{"/system/bin/cp", src, DUMP_DIR + "dump_cp.xml"});
                 p.waitFor();
                 return p.exitValue() == 0;
             } catch (Exception e) { return false; }
         }));
         methods.add(new DumpMethod("Process cat", () -> {
             try {
-                Process p = Runtime.getRuntime().exec(new String[]{"/system/bin/sh", "-c", "cat " + src + " > " + DUMP_DIR + "dump_cat.xml"});
+                java.lang.Process p = Runtime.getRuntime().exec(new String[]{"/system/bin/sh", "-c", "cat " + src + " > " + DUMP_DIR + "dump_cat.xml"});
                 p.waitFor();
                 return p.exitValue() == 0;
             } catch (Exception e) { return false; }
         }));
         methods.add(new DumpMethod("Process dd", () -> {
             try {
-                Process p = Runtime.getRuntime().exec(new String[]{"/system/bin/sh", "-c", "dd if=" + src + " of=" + DUMP_DIR + "dump_dd.xml"});
+                java.lang.Process p = Runtime.getRuntime().exec(new String[]{"/system/bin/sh", "-c", "dd if=" + src + " of=" + DUMP_DIR + "dump_dd.xml"});
                 p.waitFor();
                 return p.exitValue() == 0;
             } catch (Exception e) { return false; }
@@ -308,22 +287,8 @@ public class Main {
                 return true;
             } catch (Exception e) { return false; }
         }));
-        methods.add(new DumpMethod("ContentProvider (file)", () -> {
-            try {
-                Uri uri = Uri.fromFile(new File(src));
-                ContentResolver cr = ContentResolverHolder.getContentResolver();
-                InputStream is = cr.openInputStream(uri);
-                if (is == null) return false;
-                FileOutputStream fos = new FileOutputStream(DUMP_DIR + "dump_content.xml");
-                byte[] buf = new byte[8192];
-                int len;
-                while ((len = is.read(buf)) > 0) fos.write(buf, 0, len);
-                fos.close();
-                is.close();
-                return true;
-            } catch (Exception e) { return false; }
-        }));
-        
+
+
         int total = methods.size();
         int ok = 0;
         for (DumpMethod m : methods) {
@@ -341,7 +306,7 @@ public class Main {
     private static String getSelinuxContext() {
         try {
             byte[] bytes = new byte[1024];
-            java.io.FileInputStream fis = new java.io.FileInputStream("/proc/self/attr/current");
+            FileInputStream fis = new FileInputStream("/proc/self/attr/current");
             int len = fis.read(bytes);
             fis.close();
             if (len > 0) return new String(bytes, 0, len).trim();
@@ -349,19 +314,22 @@ public class Main {
         return "unknown";
     }
 
-    private static class ContentResolverHolder {
-        private static ContentResolver sResolver;
-        static {
-            try {
-                android.app.ActivityThread at = android.app.ActivityThread.systemMain();
-                Context ctx = at.getSystemContext();
-                sResolver = ctx.getContentResolver();
-            } catch (Exception e) {
-                System.err.println("Failed to get ContentResolver: " + e);
+    private static void printProcessGroups() {
+        try {
+            BufferedReader r = new BufferedReader(new FileReader("/proc/self/status"));
+            String line;
+            while ((line = r.readLine()) != null) {
+                if (line.startsWith("Gid:")) {
+                    System.out.println("GID info: " + line);
+                }
+                if (line.startsWith("Groups:")) {
+                    System.out.println("Groups: " + line);
+                }
             }
-        }
-        static ContentResolver getContentResolver() { return sResolver; }
+            r.close();
+        } catch (Exception ignored) {}
     }
+
 
     static class WriteMethod {
         String name;
